# python-gd-mcp

./: .gitignore  README.md  pyproject.toml
frontend-pygd/: index.html  package-lock.json  package.json
frontend-pygd/src/: App.jsx
scripts/: run_fastapi.py
src/app/: main.py
src/auth/: main.py
src/mcp_client/: main.py
src/mcp_server/: main.py
src/utils/: main.py
